src/FAQSupportView/FAQSupportView.css
/* Support View */
h1 {
    font-size: 26px;
    color: black;
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}

.faq-list {
    text-align: left;
    padding: 40px;
}

.faq-list li {
    margin: 0px;
}

.faq-question,
.faq-answer {
    padding: 0px;
    font-size: 18px;
}

.faq-question {
    font-weight: 700;
}

.faq-list li,
.service-form-content {
    overflow-wrap: break-word;
}

.service-form-content {
    margin-bottom: 50px;
}

.support-btns {
    text-align: center;
    margin-bottom: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.support-btns a {
    color: white;
    background-color: #0e6afd;
    margin-left: 10px;
    margin-right: 10px;
    border-radius: 10px;
    font-size: 16px;
    text-align: center;
    padding: 12px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.glasses-img,
.two-laptops,
.cpe-img {
    margin-top: 30px;
    width: 100%;
    height: auto;
    border-radius: 0px;
}

.cpe-container,
figure {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.cpe-container figcaption {
    text-align: center;
    font-weight: 600;
    margin-top: 5px;
}

.cpe-img,
.km-map-img {
    border: 2px solid black;
}

.km-map-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 70%;
    height: auto;
}

.two-laptops {
    display: none;
}

@media (min-width: 411px) and (max-width: 1023px) {
    .cpe-img {
        width: 75%;
        margin-left: auto;
        margin-right: auto;
    }
}

/* Larger Screens ie. Desktops */

@media (min-width: 1024px) {
    .desktop-row-imgs {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
    }
    .two-laptops {
        display: block;
        margin-left: 20px;
    }
    .glasses-img,
    .two-laptops,
    .cpe-img {
        height: 235px;
        width: auto;
    }
    .cpe-container {
        flex-direction: row;
    }
}

/* Resize imgs to maintain aesthetically appeasing gap  */

@media (min-width: 1175px) {
    .glasses-img,
    .two-laptops,
    .cpe-img {
        height: 300px;
        width: auto;
    }
}

@media (min-width: 1325px) {
    .glasses-img,
    .two-laptops,
    .cpe-img {
        height: 350px;
        width: auto;
    }
}

